--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 </head>
 <body>
 
+  <ul class="skip-links">
+    <li><a href="#nav" aria-label="Jump to navigation"></a>Jump to navigation</li>
+    <li><a href="#main" aria-label="Jump to main content"></a>Jump to main content</li>
+  </ul>
+
   <header class="masthead section-dark section-bg embed embed-16by9">
     <div class="absolute w-1 pin-tl text-center pad-t pad-b gutter-1-2">
       <div class="grid grid-middle">
